@@ -3,12 +3,18 @@ package com.iwomi.nofiaPay.services.accounts;
 import com.iwomi.nofiaPay.core.mappers.IAccountMapper;
 import com.iwomi.nofiaPay.dtos.AccountDto;
 import com.iwomi.nofiaPay.dtos.responses.Account;
+import com.iwomi.nofiaPay.dtos.responses.AccountTransDto;
+import com.iwomi.nofiaPay.dtos.responses.Transaction;
 import com.iwomi.nofiaPay.frameworks.data.entities.AccountEntity;
+import com.iwomi.nofiaPay.frameworks.data.entities.TransactionEntity;
 import com.iwomi.nofiaPay.frameworks.data.repositories.accounts.AccountRepository;
 import com.iwomi.nofiaPay.frameworks.data.repositories.accounts.IAccountRepository;
+import com.iwomi.nofiaPay.frameworks.data.repositories.transactions.TransactionRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
+import java.time.LocalDate;
+import java.util.Date;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
@@ -21,6 +27,8 @@ public class AccountService  implements  IAccountService{
     private  final AccountRepository accountRepository;
 
     private  final IAccountMapper mapper;
+
+    private  final TransactionRepository transactionRepository;
     @Override
     public List<Account> viewAllAccounts() {
         return accountRepository.getAllAccounts()
@@ -49,13 +57,21 @@ public class AccountService  implements  IAccountService{
           accountRepository.deleteAccount(uuid);
     }
 
-//    @Override
-//    public List<String> getAccountNumbersByClientCode(String clientCode) {
-//        return  accountRepository.getAccountNumbersByClientCode(clientCode)
-//                .stream()
-//                .map(AccountEntity::getAccountNumber)
-//                .collect(Collectors.toList());
-//    }
+    @Override
+    public List<Account> getAccountsByClientCode(String clientCode) {
+        return  accountRepository.getAccountsByClientCode(clientCode)
+                .stream()
+                .map(mapper::mapToModel)
+                .toList();
+    }
+
+    @Override
+    public List<String> getAccountNumbersByClientCode(String clientCode) {
+        return  accountRepository.getAccountNumbersByClientCode(clientCode)
+                .stream()
+                .map(AccountEntity::getAccountNumber)
+                .collect(Collectors.toList());
+    }
 
     @Override
     public Map<String, List<Double>> viewAccountBalances(String clientCode) {
@@ -69,5 +85,15 @@ public class AccountService  implements  IAccountService{
                 .collect(Collectors.groupingBy(AccountEntity::getAccountNumber,
                         Collectors.mapping(account -> account.getBalance().doubleValue(), Collectors.toList())));
     }
+
+    @Override
+    public List<Account> viewAccountByDateRange(Date start, Date end) {
+        return accountRepository.getAccountByDateRange(start, end)
+                .stream()
+                .filter(account -> account.getCreatedAt().after(start) && account.getCreatedAt().before(end))
+                .map(mapper::mapToModel)
+                .collect(Collectors.toList());
+    }
+
 
 }
